# Kessel-Digital-Agent-Platform

./: .gitignore  CLAUDE.md  CLAUDE_AI_Continuation_Prompt_25_Files.md  CONTINUATION_PROMPT.md  CONTINUATION_PROMPT_KB_Enhancement_Jan18.md  MPA_KB_V66_OPTIMIZATION_INSTRUCTIONS.md  MPA_v6.0_Advanced_KB_Enhancement_Plan.md  MPA_v6.0_KB_Enhancement_Plan.md  PLATFORM_ARCHITECTURE.md  README.md  VSCODE_DEPLOYMENT_HANDOFF.md  VSCODE_Kickoff_Prompt_KB_Expansion.md  VSCODE_MPA_v6_Continuation_Prompt.md  package-lock.json  package.json  validate_kb_file.sh
src/ml-training/: Dockerfile  Dockerfile.jupyter  Dockerfile.serving  README.md  docker-compose.yml  pyproject.toml  requirements.txt  train.py
src/ml-training/config/: anomaly_detector.yaml  budget_optimizer.yaml  churn_predictor.yaml  config.yaml  lookalike.yaml  media_mix.yaml  propensity.yaml  response_curve.yaml
src/ml-training/deployment/: azure_ml_deploy.py  model_loader.py  serve.py
src/ml-training/deployment/scoring/: score_anomaly.py  score_budget.py  score_churn.py  score_lookalike.py  score_media_mix.py  score_propensity.py  score_response_curve.py
src/ml-training/kdap_ml/: __init__.py  anomaly_detector.py  base.py  budget_optimizer.py  churn_predictor.py  config.py  lookalike.py  media_mix.py  preprocessing.py  propensity.py  response_curve.py
src/ml-training/kdap_ml/data_pipelines/: __init__.py  base.py
src/ml-training/tests/: __init__.py  conftest.py  test_cli.py  test_integration.py
src/ml-training/tests/data_pipelines/: __init__.py  test_synthetic_generators.py  test_transforms.py  (+1 more)
(+5210 files in other folders)
